--- a/index.html
+++ b/index.html
@@ -9,15 +9,55 @@
 <body>
 
     <header>
-        <h1>Recicla Tech</h1>
-        <h2>N1</h2>
+        <div>
+            <img src="./assets/Logo.png" alt="">
+            <h1>ReciclaTech</h1>
+        </div>
         <nav>
             <a href="#"> Como funciona? </a>
             <a href="#"> Doar </a>
             <a href="#"> Adquirir </a>
-            <a href="#"> Começar Agora </a>
+            <a class="BtnVerdeHeader" href="#"> Começar Agora </a>
         </nav>
     </header>
+
+    <main>
+        <section class="PrimeiraSection">
+            <section>
+                <h2>Dê uma segunda vida aos seus eletrônicos!</h2>
+                <p>Conectamos pessoas que querem doar eletrônicos em bom estado com quem precisa deles. Simples, gratuito e sustentável!</p>
+                <div class="BoxBntFirstSection">
+                    <button class="BntVerde">Quero doar</button>
+                    <button class="BntBranco">Quero Adquirir</button>
+                </div>
+            </section>
+        </section>
+
+
+
+
+
+        <section class="ProdutosDisponiveis">
+            <article>
+                <img src="./assets/Fone.png" alt="Fone de ouvido JBL"/>
+                <h3>Fone</h3>
+                <p>Fone em ótimo estado, pronto pra uso.</p>
+                <button>Quero Adquirir</button>
+            </article>
+            <article>
+                <img src="./assets/Notebook.png"/>
+                <h3>Notebooks</h3>
+                <p>Notebooks funcionando direitinho, prontos pra você usar.</p>
+                <button>Quero Adquirir</button>
+            </article>
+            <article>
+                <img src="./assets/Smartphones.png"/>
+                <h3>Smartphones</h3>
+                <p>Celulares em ótimo estado, prontos pra uma nova jornada.</p>
+                <button>Quero Adquirir</button>
+            </article>
+        
+    </main>
 
 </body>
 </html>
