Criação da primeira section para desktop e mobile

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
     <header>
-        <div>
-            <img src="./assets/Logo.png" alt="">
+        <div class="caixaLogo">
+            <img src="./assets/Logo.png" alt="Logo"/>
             <h1>ReciclaTech</h1>
         </div>
         <nav>
@@ -27,10 +27,11 @@
                 <h2>Dê uma segunda vida aos seus eletrônicos!</h2>
                 <p>Conectamos pessoas que querem doar eletrônicos em bom estado com quem precisa deles. Simples, gratuito e sustentável!</p>
                 <div class="BoxBntFirstSection">
-                    <button class="BntVerde">Quero doar</button>
-                    <button class="BntBranco">Quero Adquirir</button>
+                    <button class="BntDoar">Quero doar</button>
+                    <button class="BntAdquirir">Quero Adquirir</button>
                 </div>
             </section>
+            <img src="./assets/reciclagem.png" alt="Imagem do coração com componentes eletrônicos"/>
         </section>
 
 
